--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -7,3 +7,4 @@ group_imports = "StdExternalCrate"
 reorder_impl_items = true
 struct_lit_single_line = true
 use_small_heuristics = "Max"
+enum_discrim_align_threshold = 50
